# main

./: .gitignore  CONTRIBUTING.md  GIT-CHEAT-SHEET.md  README.md  pyproject.toml
scripts/: git-helpers.sh
src/sample_project/: __main__.py  greet.py
tests/: test_greet.py
